--- a/D_5026201117_B.html
+++ b/D_5026201117_B.html
@@ -66,7 +66,7 @@
             </div>
 
             <!-- tombol -->
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-sm-auto">
                 <button type="submit" class="btn btn-primary btn-lg">Kirim</button>
               </div>
